HVAC Backup 2/objects/CP_Payout_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Code__c</fullName>
        <label>Family Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payout__c</fullName>
        <label>Payout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Family_Code__c</fullName>
        <label>Sub Family Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAT_Max__c</fullName>
        <defaultValue>99999</defaultValue>
        <label>TAT Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAT_Min__c</fullName>
        <label>TAT Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <label>Work Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dismantling &amp; Re-Installation</fullName>
                </value>
                <value>
                    <fullName>Breakdown</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Dismantling &amp; Re-Installation - SAC</fullName>
                </value>
                <value>
                    <fullName>FGR to be done</fullName>
                </value>
                <value>
                    <fullName>Gas Charging</fullName>
                </value>
                <value>
                    <fullName>Gas Charging - Cassette / Verticool &amp; SAC - 410A</fullName>
                </value>
                <value>
                    <fullName>Gas Charging - SAC R22</fullName>
                </value>
                <value>
                    <fullName>Gas Charging-WAC/PAC</fullName>
                </value>
                <value>
                    <fullName>Gas Charging – WRAC</fullName>
                </value>
                <value>
                    <fullName>Gas Top up</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>PDI (Physical Inspection Only)</fullName>
                </value>
                <value>
                    <fullName>PDI with Electrical Repair</fullName>
                </value>
                <value>
                    <fullName>PM Call - Dry Service</fullName>
                </value>
                <value>
                    <fullName>PM Call - Wet Service</fullName>
                </value>
                <value>
                    <fullName>PMS Call</fullName>
                </value>
                <value>
                    <fullName>Replacement of IDU</fullName>
                </value>
                <value>
                    <fullName>Replacement of IDU/ODU</fullName>
                </value>
                <value>
                    <fullName>Gas Charging ï¿½ WRAC</fullName>
                    <isActive>false</isActive>
                    <label>Gas Charging ï¿½ WRAC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CP Payout Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Work_Type__c</columns>
        <columns>Family_Code__c</columns>
        <columns>Sub_Family_Code__c</columns>
        <columns>TAT_Min__c</columns>
        <columns>TAT_Max__c</columns>
        <columns>Payout__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>CP Payout Matrix</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CP Payout Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>